<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#038595"
        app:subtitleTextColor="#FFFFFF"
        app:titleTextColor="#FFFFFF">

    </androidx.appcompat.widget.Toolbar>

    <HorizontalScrollView
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar"
        android:background="#ECE6E6">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/all_shape"
                android:text="@string/tv_all"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/all_shape"
                android:text="@string/tv_web"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/all_shape"
                android:text="@string/tv_mobile"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_best_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/all_shape"
                android:text="@string/tv_best_field"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_other_languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/all_shape"
                android:shadowColor="#FFFFFF"
                android:text="@string/tv_top5"
                android:textColor="#000000" />
        </LinearLayout>
    </HorizontalScrollView>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_all_languages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

        </androidx.recyclerview.widget.RecyclerView>

    </FrameLayout>

</RelativeLayout>