<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".details">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:background="#ffffff"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll"

            >

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/progresslottie">

                </com.airbnb.lottie.LottieAnimationView>


                <ImageView
                    android:id="@+id/imgae_language"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:srcCompat="@tools:sample/avatars" />

            </FrameLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_des"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"></androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <!--        </androidx.coordinatorlayout.widget.CoordinatorLayout>-->


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frame_lan_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="20dp"
                android:gravity="start">


                <TextView
                    android:id="@+id/tv_language_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frame_lan_name"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="start">


                    <TextView
                        android:id="@+id/tv_language_discription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="20sp" />


                </FrameLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/leniar_cpurses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/card"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/shape_layout_courses"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_course_arabic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_tv_course"
                    android:gravity="center_horizontal"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/arabic_course_btn"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_course_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_tv_course"
                    android:gravity="center_horizontal"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/english_course_btn"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_premium_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_tv_course"
                    android:gravity="center_horizontal"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/premium_course_btn"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:layout_below="@id/leniar_cpurses"-->
            <!--                android:layout_marginTop="@dimen/_10sdp">-->


            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_below="@id/leniar_cpurses"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_10sdp"
                app:fillColor="#FFFFFFFF"
                app:indicatorMarginHorizontal="50dp"
                app:pageColor="#00000000"
                app:radius="10dp"
                app:slideInterval="3000"
                app:strokeColor="#FFFFFF"
                app:strokeWidth="1dp" />


            <!--            </LinearLayout>-->


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>